force-app/main/default/objects/User_Story_Component__c/User_Story_Component__c.object-meta.xml
<CustomObject>
    <label>User Story Component</label>
    <nameField>
        <displayFormat>USC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>