force-app/main/default/objects/User_Story_Component__c/fields/Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Api_Name__c</fullName>
    <label>Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>