force-app/main/default/objects/User_Story_Component__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <label>Metadata Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ApexClass</fullName>
            </value>
            <value>
                <fullName>ApexComponent</fullName>
            </value>
            <value>
                <fullName>ApexPage</fullName>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
            </value>
            <value>
                <fullName>AuraDefinitionBundle</fullName>
            </value>
            <value>
                <fullName>CustomApplication</fullName>
            </value>
            <value>
                <fullName>CustomField</fullName>
            </value>
            <value>
                <fullName>CustomLabel</fullName>
            </value>
            <value>
                <fullName>CustomMetadata</fullName>
            </value>
            <value>
                <fullName>CustomObject</fullName>
            </value>
            <value>
                <fullName>CustomObjectTranslation</fullName>
            </value>
            <value>
                <fullName>CustomPageWebLink</fullName>
            </value>
            <value>
                <fullName>CustomTab</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>DuplicateRule</fullName>
            </value>
            <value>
                <fullName>EmailTemplate</fullName>
            </value>
            <value>
                <fullName>FieldSet</fullName>
            </value>
            <value>
                <fullName>FlexiPage</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>HomePageComponent</fullName>
            </value>
            <value>
                <fullName>HomePageLayout</fullName>
            </value>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>LeadConvertSettings</fullName>
            </value>
            <value>
                <fullName>Letterhead</fullName>
            </value>
            <value>
                <fullName>LightningComponentBundle</fullName>
            </value>
            <value>
                <fullName>LightningWebComponentBundle</fullName>
            </value>
            <value>
                <fullName>ListView</fullName>
            </value>
            <value>
                <fullName>MatchingRule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>