force-app/main/default/objects/User_Story_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Api_Name__c</columns>
    <columns>Metadata_Type__c</columns>
    <columns>Change_Type__c</columns>
    <columns>User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>